Implemented generic type support for DroolsService, added the resource upload mechanism for reading Rule files from the classpath, created DroolsServiceTest and currency.drl XML-based rule set, added JVM parameters for GWT compiler and Maven JUnit plugin to increase memory consumption required by Rice, added Janino Maven dependency for Drools.
git-svn-id: https://svn.kuali.org/repos/student/contrib/ksa/trunk@31460 0ac02d80-fb3f-11dc-a574-c57244a850eb