@@ -8,40 +8,42 @@
 	express or implied. See the License for the specific language governing permissions 
 	and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.sigmasys.kuali.ksa</groupId>
-		<artifactId>ksa-common</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
+    <parent>
+        <groupId>com.sigmasys.kuali.ksa</groupId>
+        <artifactId>ksa-common</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
-	<groupId>com.sigmasys.kuali.ksa.core</groupId>
-	<artifactId>ksa</artifactId>
-	<name>KSA webapp</name>
+    <groupId>com.sigmasys.kuali.ksa.core</groupId>
+    <artifactId>ksa</artifactId>
+    <name>KSA webapp</name>
 
-	<version>1.0.0-SNAPSHOT</version>
-	<packaging>war</packaging>
-	<url>http://maven.apache.org</url>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+    <url>http://maven.apache.org</url>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jvm.args>-Xmx768m -Xms512m -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m</jvm.args>
+    </properties>
 
 
-	<build>
-		<finalName>ksa</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<test>ServiceTestSuite</test>
-				</configuration>
-			</plugin>
+    <build>
+        <finalName>ksa</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <argLine>${jvm.args}</argLine>
+                    <test>ServiceTestSuite</test>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
@@ -49,7 +51,7 @@
                 <executions>
                     <execution>
                         <configuration>
-                            <extraJvmArgs>-Xmx768m -Xms256m</extraJvmArgs>
+                            <extraJvmArgs>${jvm.args}</extraJvmArgs>
                             <modules>
                                 <module>com.sigmasys.kuali.ksa.gwt.Ksa</module>
                             </modules>
@@ -61,16 +63,16 @@
                     </execution>
                 </executions>
             </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.1.1</version>
-				<configuration>
-					<webXml>${basedir}/src/main/webapp/WEB-INF/web.xml</webXml>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.1.1</version>
+                <configuration>
+                    <webXml>${basedir}/src/main/webapp/WEB-INF/web.xml</webXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
